objects/Porch_Event_Field_Mapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Event__c</fullName>
        <description>Porch.com Event</description>
        <label>Event</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fields_Tracked__c</fullName>
        <description>Salesforce fields to track for the Porch.com event.When a value changes for any of these fields, the corresponding record is expected to have met a Porch.com event</description>
        <label>Fields Tracked</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Type__c</fullName>
        <description>Salesforce object type</description>
        <label>Source Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Porch Event Field Mapping</label>
</CustomObject>